--- a/styles/alert.css
+++ b/styles/alert.css
@@ -1,12 +1,21 @@
 /* adopted from https://www.w3schools.com/howto/howto_js_alert.asp */
 
+#outdated-warning {
+    position: sticky;
+    z-index: 1000;
+}
+
+#outdated-warning.show + #container {
+    height: calc(100% - var(--top-navigation-height) - 1.4em * 4 - 1em);
+}
+
 .alert {
-    padding: 20px;
+    padding: 1.4em;
     background-color: #daf8fd;
     color: black;
     border-radius: 0.5em;
     margin: 1rem 2% 1rem 2%;
-    line-height: 20px;
+    line-height: 1.4em;
     display: none;
 }
 #outdated-warning.show .alert {
